# SPINE

./: CMakeLists.txt  LICENSE  README.md  autograd.py  mnist_dataloader.py  pytorch_test.py  train_mnist.py
include/: lif.h  linear.h  tensor.h
python/: bindings.cpp
src/: lif.cpp  linear.cpp  tensor.cpp
tests/: test.py
